src/decklinkcapi/cpp/decklinkcapi.h

class IDeckLinkVideoBuffer;
class IDeckLinkVideoFrame;
class IDeckLinkOutput;
class IDeckLinkVideoOutputCallback;
typedef void IDeckLinkVideoBuffer;
typedef void IDeckLinkVideoFrame;
typedef void IDeckLinkOutput;
typedef void IDeckLinkVideoOutputCallback;
CAPI bool IDeckLinkOutput_StartScheduledPlayback(IDeckLinkOutput* output, long long startTime, long long timeScale, double speed);
CAPI bool IDeckLinkOutput_StopScheduledPlayback(IDeckLinkOutput* output, long long stopTime, long long timeScale);
CAPI bool IDeckLinkOutput_SetScheduledFrameCompletionCallback(IDeckLinkOutput* output, IDeckLinkVideoOutputCallback* callback);
CAPI IDeckLinkVideoFrame* IDeckLinkOutput_CreateVideoFrameWithBuffer(IDeckLinkOutput* output, int width, int height, int rowBytes, int pixelFormat, IDeckLinkVideoBuffer* buffer);
CAPI bool IDeckLinkOutput_DisplayVideoFrameSync(IDeckLinkOutput* output, IDeckLinkVideoFrame* frame);