src/main/java/com/loadingbyte/cinecred/natives/decklinkcapi/decklinkcapi_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StartScheduledPlayback(IDeckLinkOutput *output, long long startTime, long long timeScale, double speed)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_StartScheduledPlayback$descriptor() {
        return IDeckLinkOutput_StartScheduledPlayback.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StartScheduledPlayback(IDeckLinkOutput *output, long long startTime, long long timeScale, double speed)
     * }
     */
    public static MethodHandle IDeckLinkOutput_StartScheduledPlayback$handle() {
        return IDeckLinkOutput_StartScheduledPlayback.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StartScheduledPlayback(IDeckLinkOutput *output, long long startTime, long long timeScale, double speed)
     * }
     */
    public static MemorySegment IDeckLinkOutput_StartScheduledPlayback$address() {
        return IDeckLinkOutput_StartScheduledPlayback.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StartScheduledPlayback(IDeckLinkOutput *output, long long startTime, long long timeScale, double speed)
     * }
     */
    public static boolean IDeckLinkOutput_StartScheduledPlayback(MemorySegment output, long startTime, long timeScale, double speed) {
        var mh$ = IDeckLinkOutput_StartScheduledPlayback.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_StartScheduledPlayback", output, startTime, timeScale, speed);
            }
            return (boolean)mh$.invokeExact(output, startTime, timeScale, speed);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_StopScheduledPlayback {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_LONG_LONG,
            decklinkcapi_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_StopScheduledPlayback");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StopScheduledPlayback(IDeckLinkOutput *output, long long stopTime, long long timeScale)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_StopScheduledPlayback$descriptor() {
        return IDeckLinkOutput_StopScheduledPlayback.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StopScheduledPlayback(IDeckLinkOutput *output, long long stopTime, long long timeScale)
     * }
     */
    public static MethodHandle IDeckLinkOutput_StopScheduledPlayback$handle() {
        return IDeckLinkOutput_StopScheduledPlayback.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StopScheduledPlayback(IDeckLinkOutput *output, long long stopTime, long long timeScale)
     * }
     */
    public static MemorySegment IDeckLinkOutput_StopScheduledPlayback$address() {
        return IDeckLinkOutput_StopScheduledPlayback.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_StopScheduledPlayback(IDeckLinkOutput *output, long long stopTime, long long timeScale)
     * }
     */
    public static boolean IDeckLinkOutput_StopScheduledPlayback(MemorySegment output, long stopTime, long timeScale) {
        var mh$ = IDeckLinkOutput_StopScheduledPlayback.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_StopScheduledPlayback", output, stopTime, timeScale);
            }
            return (boolean)mh$.invokeExact(output, stopTime, timeScale);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_SetScheduledFrameCompletionCallback {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_SetScheduledFrameCompletionCallback");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_SetScheduledFrameCompletionCallback(IDeckLinkOutput *output, IDeckLinkVideoOutputCallback *callback)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_SetScheduledFrameCompletionCallback$descriptor() {
        return IDeckLinkOutput_SetScheduledFrameCompletionCallback.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_SetScheduledFrameCompletionCallback(IDeckLinkOutput *output, IDeckLinkVideoOutputCallback *callback)
     * }
     */
    public static MethodHandle IDeckLinkOutput_SetScheduledFrameCompletionCallback$handle() {
        return IDeckLinkOutput_SetScheduledFrameCompletionCallback.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_SetScheduledFrameCompletionCallback(IDeckLinkOutput *output, IDeckLinkVideoOutputCallback *callback)
     * }
     */
    public static MemorySegment IDeckLinkOutput_SetScheduledFrameCompletionCallback$address() {
        return IDeckLinkOutput_SetScheduledFrameCompletionCallback.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_SetScheduledFrameCompletionCallback(IDeckLinkOutput *output, IDeckLinkVideoOutputCallback *callback)
     * }
     */
    public static boolean IDeckLinkOutput_SetScheduledFrameCompletionCallback(MemorySegment output, MemorySegment callback) {
        var mh$ = IDeckLinkOutput_SetScheduledFrameCompletionCallback.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_SetScheduledFrameCompletionCallback", output, callback);
            }
            return (boolean)mh$.invokeExact(output, callback);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_CreateVideoFrameWithBuffer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_INT,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_CreateVideoFrameWithBuffer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * IDeckLinkVideoFrame *IDeckLinkOutput_CreateVideoFrameWithBuffer(IDeckLinkOutput *output, int width, int height, int rowBytes, int pixelFormat, IDeckLinkVideoBuffer *buffer)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_CreateVideoFrameWithBuffer$descriptor() {
        return IDeckLinkOutput_CreateVideoFrameWithBuffer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * IDeckLinkVideoFrame *IDeckLinkOutput_CreateVideoFrameWithBuffer(IDeckLinkOutput *output, int width, int height, int rowBytes, int pixelFormat, IDeckLinkVideoBuffer *buffer)
     * }
     */
    public static MethodHandle IDeckLinkOutput_CreateVideoFrameWithBuffer$handle() {
        return IDeckLinkOutput_CreateVideoFrameWithBuffer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * IDeckLinkVideoFrame *IDeckLinkOutput_CreateVideoFrameWithBuffer(IDeckLinkOutput *output, int width, int height, int rowBytes, int pixelFormat, IDeckLinkVideoBuffer *buffer)
     * }
     */
    public static MemorySegment IDeckLinkOutput_CreateVideoFrameWithBuffer$address() {
        return IDeckLinkOutput_CreateVideoFrameWithBuffer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * IDeckLinkVideoFrame *IDeckLinkOutput_CreateVideoFrameWithBuffer(IDeckLinkOutput *output, int width, int height, int rowBytes, int pixelFormat, IDeckLinkVideoBuffer *buffer)
     * }
     */
    public static MemorySegment IDeckLinkOutput_CreateVideoFrameWithBuffer(MemorySegment output, int width, int height, int rowBytes, int pixelFormat, MemorySegment buffer) {
        var mh$ = IDeckLinkOutput_CreateVideoFrameWithBuffer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_CreateVideoFrameWithBuffer", output, width, height, rowBytes, pixelFormat, buffer);
            }
            return (MemorySegment)mh$.invokeExact(output, width, height, rowBytes, pixelFormat, buffer);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class IDeckLinkOutput_DisplayVideoFrameSync {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            decklinkcapi_h.C_BOOL,
            decklinkcapi_h.C_POINTER,
            decklinkcapi_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("IDeckLinkOutput_DisplayVideoFrameSync");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisplayVideoFrameSync(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame)
     * }
     */
    public static FunctionDescriptor IDeckLinkOutput_DisplayVideoFrameSync$descriptor() {
        return IDeckLinkOutput_DisplayVideoFrameSync.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisplayVideoFrameSync(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame)
     * }
     */
    public static MethodHandle IDeckLinkOutput_DisplayVideoFrameSync$handle() {
        return IDeckLinkOutput_DisplayVideoFrameSync.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisplayVideoFrameSync(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame)
     * }
     */
    public static MemorySegment IDeckLinkOutput_DisplayVideoFrameSync$address() {
        return IDeckLinkOutput_DisplayVideoFrameSync.ADDR;
    }

    /**
     * {@snippet lang=c :
     * _Bool IDeckLinkOutput_DisplayVideoFrameSync(IDeckLinkOutput *output, IDeckLinkVideoFrame *frame)
     * }
     */
    public static boolean IDeckLinkOutput_DisplayVideoFrameSync(MemorySegment output, MemorySegment frame) {
        var mh$ = IDeckLinkOutput_DisplayVideoFrameSync.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("IDeckLinkOutput_DisplayVideoFrameSync", output, frame);
            }
            return (boolean)mh$.invokeExact(output, frame);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
